2000-06-29  Philipp Thomas  <pthomas@suse.de>
	* rtl.c : Revert NLS changes.
	* gcc.c : Fix bug in display_help introced by my last changes.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34778 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-29  Philipp Thomas  <pthomas@suse.de>
+
+	* rtl.c : Revert NLS changes.
+	* gcc.c : Fix bug in display_help introced by my last changes.
+
 Wed Jun 28 21:09:33 2000   Raja R Harinath <harinath@cs.umn.edu>
 
 	* dbxout.c (dbxout_symbol, case RESULT_DECL, VAR_DECL): Use
