--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-27  Tom Tromey  <tromey@cygnus.com>
+
+	* lex.c (java_lineterminator): Don't recognize \r after \n.  If \r
+	follows \r, then unget it at a lower level.
+
 2000-06-26  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (resolve_field_access): Pass decl, not DECL_INITIAL, to
