--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-29  James E. Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.h (MODES_TIEABLE_P): Only tie if mode class is the
+	same.  Only tie XFmode with XFmode.
+
 2000-06-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* c-decl.c, timevar.c, tlink.c: Include intl.h.
