For glibc 2.2. 	* config/ia64/linux.h (LINK_SPEC): Change so.1 to so.2.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34788 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-06-29  James E. Wilson  <wilson@cygnus.com>
 
+	* config/ia64/linux.h (LINK_SPEC): Change so.1 to so.2.
+	
 	* config/ia64/ia64.h (MODES_TIEABLE_P): Only tie if mode class is the
 	same.  Only tie XFmode with XFmode.
 
