--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,7 +1,14 @@
+2000-06-29  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/20000628-1a.h: On each of the first three inclusions,
+	declare one variable.  On the fourth, error.
+	* gcc.dg/cpp/20000628-1.c (main): Reference the three variables
+	declared by 20000628-1a.h.
+
 2000-06-29  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/930529-1.x: New file.
-	* gcc.dg/920413-1.c: Adjust expexted warning text.
+	* gcc.dg/920413-1.c: Adjust expected warning text.
 	* gcc.dg/980217-1.c: Declare abort.
 	* gcc.dg/cpp/20000628-1a.h: Use a declaration instead of an asm.
 
@@ -13,7 +20,7 @@ Thu Jun 29 09:42:40 2000  Jeffrey A Law  (law@cygnus.com)
 2000-06-28  Zack Weinberg  <zack@wolery.cumb.org>
 
 	Rearrange lots of files, removing entirely the
-	gcc.c-torture/special, gcc.c-torture/code-quality, and gcc.failure
+	gcc.c-torture/special, gcc.c-torture/code_quality, and gcc.failure
 	directories.
 
 	* Deleted files:
