--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-27  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* expr.c (lookup_field): The same field can be found through two
+	different interface. Don't declare it ambiguous in that case.
+
 2000-06-27  Tom Tromey  <tromey@cygnus.com>
 
 	* lex.c (java_lineterminator): Don't recognize \r after \n.  If \r
