--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-29  Nick Clifton  <nickc@cygnus.com>
+
+	* gcc.c-torture/compile/20000629-1.c: New test.
+
 2000-06-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 
