* c-common.c: Include c-common.h, not c-lex.h or c-tree.h. 	* c-common.h (flag_const_strings): Declare. 	(warn_format): Likewise. 	(flag_traditional): Likewise. 	(flag_isoc99): Likewise. 	(warn_parentheses): Likewise. 	(warn_conversion): Likewise. 	(C_TYPE_OBJECT_P): Likewise. 	(C_TYPE_INCOMPLETE_P): Likewise. 	(C_TYPE_FUNCTION_P): Likewise. 	(C_TYPE_OBJECT_OR_INCOMPLETE_P): Likewise. 	(C_EXP_ORIGINAL_CODE): Likewise. 	(build_unary_op): Likewise. 	(build_binary_op): Likewise. 	(lvalue_p): Likewise. 	(default_conversion): Likewise. 	(common_type): Likewise. 	* c-tree.h (C_TYPE_OBJECT_P): Remove. 	(C_TYPE_INCOMPLETE_P): Likewise. 	(C_TYPE_FUNCTION_P): Likewise. 	(C_TYPE_OBJECT_OR_INCOMPLETE_P): Likewise. 	(C_EXP_ORIGINAL_CODE): Likewise. 	(common_type): Likewise. 	(default_conversion): Likewise. 	(build_binary_op): Likewise. 	(build_unary_op): Likewise. 	(lvalue_p): Likewise. 	(flag_const_strings): Likewise. 	(warn_format): Likewise. 	(warn_conversion): Likewise. 	(flag_traditional): Likewise. 	(flag_isoc99): Likewise. 	(warn_parentheses): Likewise.
	* cp-tree.h (flag_const_strings): Remove.
	(warn_parentheses): Likewise.
	(warn_format): Likewise.
	(common_type): Likewise.
	(default_conversion): Likewise.
	(build_binary_op): Likewise.
	(cp_build_binary_op): New macro.
	* call.c (build_new_op): Use cp_build_binary_op instead of
	build_binary_op.
	* class.c (build_vtable_entry_ref): Likewise.
	* decl.c (expand_static_init): Likewise.
	(compute_array_index_type): Likewise.
	(build_enumerator): Likewise.
	* decl2.c (delete_sanity): Likewise.
	(start_static_initialization_or_destruction): Likewise.
	* error.c (dump_type_suffix): Likewise.
	* init.c (resolve_offset_ref): Likewise.
	(build_new): Likewise.
	(build_new_1): Likewise.
	(build_vec_delete_1): Likewise.
	(build_vec_init): Likewise.
	(build_delete): Likewise.
	* rtti.c (synthesize_tinfo_fn): Likewise.
	(synthesize_tinfo_var): Likewise.
	* search.c (expand_upcast_fixups): Likewise.
	(fixup_all_virtual_upcast_offsets)

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,39 @@
+2000-06-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-common.c: Include c-common.h, not c-lex.h or c-tree.h.
+	* c-common.h (flag_const_strings): Declare.
+	(warn_format): Likewise.
+	(flag_traditional): Likewise.
+	(flag_isoc99): Likewise.
+	(warn_parentheses): Likewise.
+	(warn_conversion): Likewise.
+	(C_TYPE_OBJECT_P): Likewise.
+	(C_TYPE_INCOMPLETE_P): Likewise.
+	(C_TYPE_FUNCTION_P): Likewise.
+	(C_TYPE_OBJECT_OR_INCOMPLETE_P): Likewise.
+	(C_EXP_ORIGINAL_CODE): Likewise.
+	(build_unary_op): Likewise.
+	(build_binary_op): Likewise.
+	(lvalue_p): Likewise.
+	(default_conversion): Likewise.
+	(common_type): Likewise.
+	* c-tree.h (C_TYPE_OBJECT_P): Remove.
+	(C_TYPE_INCOMPLETE_P): Likewise.
+	(C_TYPE_FUNCTION_P): Likewise.
+	(C_TYPE_OBJECT_OR_INCOMPLETE_P): Likewise.
+	(C_EXP_ORIGINAL_CODE): Likewise.
+	(common_type): Likewise.
+	(default_conversion): Likewise.
+	(build_binary_op): Likewise.
+	(build_unary_op): Likewise.
+	(lvalue_p): Likewise.
+	(flag_const_strings): Likewise.
+	(warn_format): Likewise.
+	(warn_conversion): Likewise.
+	(flag_traditional): Likewise.
+	(flag_isoc99): Likewise.
+	(warn_parentheses): Likewise.
+	
 2000-06-29  James E. Wilson  <wilson@cygnus.com>
 
 	* config/ia64/linux.h (LINK_SPEC): Change so.1 to so.2.
