--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-29  Jim Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.h (PREFERRED_RELOAD_CLASS): Return NO_REGS for
+	a volatile mem and FR_REGS.
+
 2000-06-29  Mark Mitchell  <mark@codesourcery.com>
 
 	* c-common.c: Include c-common.h, not c-lex.h or c-tree.h.
