2000-06-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* parse.y (verify_constructor_super): Use loop variable
	`m_arg_type' initialized with `mdecl_arg_type'.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34800 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (verify_constructor_super): Use loop variable
+	`m_arg_type' initialized with `mdecl_arg_type'.
+
 2000-06-29  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (resolve_field_access): Handle case where `type_found'
