--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-29  Jason Merrill  <jason@redhat.com>
+
+	* dwarf2out.c (output_loc_operands): Don't abort on codes that have
+	no operands.
+
 2000-06-29  Jim Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.h (PREFERRED_RELOAD_CLASS): Return NO_REGS for
