--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-30  Catherine Moore  <clm@cygnus.com>
+
+	* gcc.c-torture/execute/align-1.c: New test.
+
 2000-06-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.pt/expr8.C: New test.
