--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-30  Catherine Moore  <clm@cygnus.com>
+ 
+        * c-common.c (decl_attributes):  Differentiate between
+        types and type decls for alignment.
+
 2000-06-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cpp.texi: Document #pragma GCC dependency
