in libiberty/ChangeLog:
	* cp-demangle.c (demangle_encoding): Accept no substitutions.
	(demangle_name): Handle <substitution> followed by
	<unqualified-template-name>.
	(demangle_type): Follow special substitutions with
	<class-enum-type>
	(demangle_subtitution): Set template_p for special substitutions.
	(main): Fix typos.

in gcc/cp/ChangeLog:

	* mangle.c (find_substitution): Use same_type_p.
	(write_encoding): Don't check for substitutions.

in libio/ChangeLog:

	* libioP.h (VTABLE_LABEL): Update for new vtable mangling.
	* stdstrbufs.cc (filebuf_vtable): Likewise.
	(stdiobuf_vtable): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34811 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,13 @@
+2000-06-28  Alex Samuel  <samuel@codesourcery.com>
+
+	* cp-demangle.c (demangle_encoding): Accept no substitutions.
+	(demangle_name): Handle <substitution> followed by
+	<unqualified-template-name>.
+	(demangle_type): Follow special substitutions with
+	<class-enum-type>
+	(demangle_subtitution): Set template_p for special substitutions.
+	(main): Fix typos.
+	
 2000-06-27  Alex Samuel  <samuel@codesourcery.com>
 
 	* cp-demangle.c (demangle_special_name): Swap base and derived
