Add second, reversed loop to testcase.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34812 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-30  Nick Clifton  <nickc@cygnus.com>
+
+	* gcc.c-torture/compile/20000629-1.c: Add second, reversed, loop
+	to test case.
+
 2000-06-30  Catherine Moore  <clm@cygnus.com>
 
 	* gcc.c-torture/execute/align-1.c: New test.
