* invoke.texi (-Wreturn-type): In C++, a missing return type is 	always an error.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34813 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-30  Martin von Loewis  <loewis@informatik.hu-berlin.de>
+
+	* invoke.texi (-Wreturn-type): In C++, a missing return type is
+	always an error.
+
 2000-06-30  Catherine Moore  <clm@cygnus.com>
  
         * c-common.c (decl_attributes):  Differentiate between
