* Makefile.in (c-common.o): Don't depend on c-tree.h or c-lex.h. 	* c-common.c (ridpointers): Declare. 	* c-common.h (enum rid): Declare. 	(NORID): Likewise. 	(ridpointers): Likewise. 	* c-lex.c (ridpointers): Don't declare. 	(init_lex): Initialize ridpointers. 	* c-lex.h (enum rid): Don't declare. 	(NORID): Likewise. 	(RID_FIRST_MODIFIER): Likewise. 	(ridpointers): Likewise.
	* cp-tree.h (ridpointers): Don't declare.
	* decl.c (record_builtin_type): Use CP_RID_MAX instead of RID_MAX.
	(record_builtin_java_type): Likewise.
	(init_decl_processing): Likewise.
	* lex.c: Move inclusion of lex.h.
	(ridpointers): Don't define.
	(init_parse): Initialize ripdointers.  Use CP_RID_MAX instead of
	RID_MAX.
	* lex.h (enum rid): Rename to ...
	(enum cp_rid): ... this.
	(ridpointers): Don't declare.
	* parse.y: Move inclusion of lex.h.
	* parse.c: Regenerated.
	* spew.c: Move inclusion of lex.h.

	* cp-tree.h (struct language_function): Remove temp_name_counter.
	(temp_name_counter): Remove.
	(get_temp_name): Change prototype.
	(get_guard): New function.
	(get_guard_cond): Likewise.
	(set_guard): Likewise.
	* cvt.c (build_up_reference): Adjust call to get_temp_name.
	* decl.c (expand_static_init): Use get_guard and friends to
	implement guard variables.
	* decl2.c (get_temp_name): Assume that the variables created are
	always static.
	(get_sentry): Rename to ...
	(get_guard): ... this.  Implement new ABI guard	variables.
	(get_guard_bits): New function.
	(get_guard_cond): Likewise.
	(set_guard): Likewise.
	(start_static_initialization_or_destruction): Use them.
	(do_static_initialization): Replace sentry with guard throughout.
	(do_static_destruction): Likewise.
	* init.c (create_temporary_var): Add comment.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34815 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,19 +1,20 @@
-2000-06-28  Alex Samuel  <samuel@codesourcery.com>
-
-	* mangle.c (find_substitution): Use same_type_p.
-	(write_encoding): Don't check for substitutions.
-
-2000-06-30  Nathan Sidwell  <nathan@codesourcery.com>
-
-	* parse.y (expr_no_comma_rangle): New non-terminal.
-	(template_parm): Use it for default parameter case.
-	(template_arg): Use it.
-	(expr_no_commas): Remove commented out undefined extensions.
-	* Makefile.in (CONFLICTS): Adjust to 33 s/r & 48 r/r.
-	* parse.h, parse.c: Rebuilt.
-
 2000-06-30  Mark Mitchell  <mark@codesourcery.com>
 
+	* cp-tree.h (ridpointers): Don't declare.
+	* decl.c (record_builtin_type): Use CP_RID_MAX instead of RID_MAX.
+	(record_builtin_java_type): Likewise.
+	(init_decl_processing): Likewise.
+	* lex.c: Move inclusion of lex.h.
+	(ridpointers): Don't define.
+	(init_parse): Initialize ripdointers.  Use CP_RID_MAX instead of
+	RID_MAX.
+	* lex.h (enum rid): Rename to ...
+	(enum cp_rid): ... this.
+	(ridpointers): Don't declare.
+	* parse.y: Move inclusion of lex.h.
+	* parse.c: Regenerated.
+	* spew.c: Move inclusion of lex.h.
+	
 	* cp-tree.h (struct language_function): Remove temp_name_counter.
 	(temp_name_counter): Remove.
 	(get_temp_name): Change prototype.
@@ -35,6 +36,20 @@
 	(do_static_destruction): Likewise.
 	* init.c (create_temporary_var): Add comment.
 	
+2000-06-28  Alex Samuel  <samuel@codesourcery.com>
+
+	* mangle.c (find_substitution): Use same_type_p.
+	(write_encoding): Don't check for substitutions.
+
+2000-06-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* parse.y (expr_no_comma_rangle): New non-terminal.
+	(template_parm): Use it for default parameter case.
+	(template_arg): Use it.
+	(expr_no_commas): Remove commented out undefined extensions.
+	* Makefile.in (CONFLICTS): Adjust to 33 s/r & 48 r/r.
+	* parse.h, parse.c: Rebuilt.
+
 2000-06-29  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (flag_const_strings): Remove.
