--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2000-06-30  Mark Mitchell  <mark@codesourcery.com>
 
+	* semantics.c (genrtl_asm_stmt): Don't decay input operands here.
+	(finish_asm_stmt): Do it here, instead.
+
 	* cp-tree.h (ridpointers): Don't declare.
 	* decl.c (record_builtin_type): Use CP_RID_MAX instead of RID_MAX.
 	(record_builtin_java_type): Likewise.
