--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-30  Tom Tromey  <tromey@cygnus.com>
+
+	* include/jni.h: Include <gcj/array.h>.  Fixes PR libgcj/270.
+
 2000-06-27  Andrew Haley  <aph@cygnus.com>
 
        * java/io/File.java (createTempFile): Close the FileDescriptor
