--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -255,7 +255,10 @@
 {
   /* ??? Should generalize this, so that we can also support 32 bit
      pointers.  */
-  if (! TARGET_NO_PIC && symbolic_operand (operands[1], DImode))
+  if (! TARGET_NO_PIC
+      && (GET_CODE (operands[1]) == CONST
+	  || GET_CODE (operands[1]) == SYMBOL_REF
+	  || GET_CODE (operands[1]) == LABEL_REF))
     {
       rtx temp;
 
@@ -273,6 +276,21 @@
 	emit_insn (gen_load_fptr (temp, operands[1]));
       else if (sdata_symbolic_operand (operands[1], DImode))
 	emit_insn (gen_load_gprel (temp, operands[1]));
+      else if (GET_CODE (operands[1]) == CONST
+	       && GET_CODE (XEXP (operands[1], 0)) == PLUS
+	       && GET_CODE (XEXP (XEXP (operands[1], 0), 1)) == CONST_INT
+	       && (INTVAL (XEXP (XEXP (operands[1], 0), 1)) & 0x1fff) != 0)
+	{
+	  HOST_WIDE_INT ofs = INTVAL (XEXP (XEXP (operands[1], 0), 1));
+	  rtx sym = XEXP (XEXP (operands[1], 0), 0);
+	  rtx subtarget = no_new_pseudos ? temp : gen_reg_rtx (DImode);
+
+	  sym = plus_constant (sym, ofs & ~(HOST_WIDE_INT)0x1fff);
+	  ofs &= 0x1fff;
+
+	  emit_insn (gen_load_symptr (subtarget, sym));
+	  emit_insn (gen_adddi3 (temp, subtarget, GEN_INT (ofs)));
+	}
       else
 	emit_insn (gen_load_symptr (temp, operands[1]));
 
@@ -358,14 +376,13 @@
 (define_expand "load_symptr"
   [(set (match_dup 2)
 	(plus:DI (reg:DI 1) (match_operand:DI 1 "symbolic_operand" "")))
-   (set (match_operand:DI 0 "register_operand" "") (mem:DI (match_dup 2)))]
+   (set (match_operand:DI 0 "register_operand" "") (match_dup 3))]
   ""
   "
 {
-  if (reload_in_progress)
-    operands[2] = operands[0];
-  else
-    operands[2] = gen_reg_rtx (DImode);
+  operands[2] = reload_in_progress ? operands[0] : gen_reg_rtx (DImode);
+  operands[3] = gen_rtx_MEM (DImode, operands[2]);
+  RTX_UNCHANGING_P (operands[3]) = 1;
 }")
 
 (define_insn "*load_symptr_internal1"
