* decl.c (duplicate_decls): Preserve DECL_ORIGINAL_TYPE for a 	TYPE_DECL. 	* typeck.c (commonparms): Remove obstack manipulations.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34830 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (duplicate_decls): Preserve DECL_ORIGINAL_TYPE for a
+	TYPE_DECL.
+	* typeck.c (commonparms): Remove obstack manipulations.
+
 2000-07-01  Benjamin Chelf  <chelf@codesourcery.com>
 
         * Make-lang.in (cc1plus$(exeext)): Added c-semantics.o.
