* mangle.c (canonicalize_for_substitution): Return the canonical 	variant of a type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34834 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-02  Mark Mitchell  <mark@codesourcery.com>
 
+	* mangle.c (canonicalize_for_substitution): Return the canonical
+	variant of a type.
+
 	* decl.c (duplicate_decls): Preserve DECL_ORIGINAL_TYPE for a
 	TYPE_DECL.
 	* typeck.c (commonparms): Remove obstack manipulations.
