* gcc.c-torture/compile/20000701-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34836 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-02  Zack Weinberg  <zack@wolery.cumb.org
+
+	* gcc.c-torture/compile/20000701-1.c: New test.
+
 2000-06-30  Nick Clifton  <nickc@cygnus.com>
 
 	* gcc.c-torture/compile/20000629-1.c: Add second, reversed, loop
