* pt.c (instantiate_class_template): Set CLASSTYPE_VBASECLASSES. 	* semantics.c (begin_class_definition): Clear it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34842 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-03  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* pt.c (instantiate_class_template): Set CLASSTYPE_VBASECLASSES.
+	* semantics.c (begin_class_definition): Clear it.
+
 2000-07-02  Benjamin Chelf  <chelf@codesourcery.com>
 
 	* cp-tree.h (genrtl_goto_stmt): Remove declaration.
